<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_text" />


    <!--email field-->
    <LinearLayout
        android:id="@+id/layout_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle_login"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="0dp"
            android:src="@drawable/ic_email_outline"
            android:tint="@color/rectangle_color" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/email_address_e_g_johndoe_gmail_com"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/rectangle_color_faded" />
    </LinearLayout>

    <!--password field-->
    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_field"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_login"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_account_key"
            android:tint="@color/rectangle_color" />

        <EditText
            android:id="@+id/et_password_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/rectangle_color_faded" />
    </LinearLayout>

    <!--repeat password-->
    <LinearLayout
        android:id="@+id/layout_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_login"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_account_key"
            android:tint="@color/rectangle_color" />

        <EditText
            android:id="@+id/et_password_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColorHint="@color/rectangle_color_faded" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password_repeat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/action_button"
        android:ems="10"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/already_have_an_account" />


</RelativeLayout>